travis-ci update

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Richard70NL <richard@richard70.nl>"]
 edition = "2018"
 
 [features]
-default = ["debug_utils"]
+default = []
 
 debug_utils = []
 
