--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,36 @@
 language: rust
+
+script:
+  - cargo build --verbose
+  - cargo build --verbose --features debug_utils
+
 rust:
   - stable
   - beta
   - nightly
+
+env:
+  - TARGET=i686-apple-darwin
+    os: osx
+  - TARGET=i686-linux-android
+  - TARGET=i686-pc-windows-gnu
+    os: windows
+  - TARGET=i686-pc-windows-msvc
+    os: windows
+  - TARGET=i686-unknown-freebsd
+  - TARGET=i686-unknown-linux-gnu
+  - TARGET=i686-unknown-linux-musl
+  - TARGET=x86_64-apple-darwin
+    os: osx
+  - TARGET=x86_64-pc-windows-gnu
+    os: windows
+  - TARGET=x86_64-pc-windows-msvc
+    os: windows
+  - TARGET=x86_64-sun-solaris
+  - TARGET=x86_64-unknown-freebsd
+  - TARGET=x86_64-unknown-linux-gnu
+  - TARGET=x86_64-unknown-linux-musl
+
 matrix:
   allow_failures:
     - rust: nightly
-  fast_finish: true
