--- a/.travis.yml
+++ b/.travis.yml
@@ -10,28 +10,27 @@ rust:
   - beta
   - nightly
 
-env:
-  - TARGET=i686-apple-darwin
-    os: osx
-  - TARGET=i686-linux-android
-  - TARGET=i686-pc-windows-gnu
-    os: windows
-  - TARGET=i686-pc-windows-msvc
-    os: windows
-  - TARGET=i686-unknown-freebsd
-  - TARGET=i686-unknown-linux-gnu
-  - TARGET=i686-unknown-linux-musl
-  - TARGET=x86_64-apple-darwin
-    os: osx
-  - TARGET=x86_64-pc-windows-gnu
-    os: windows
-  - TARGET=x86_64-pc-windows-msvc
-    os: windows
-  - TARGET=x86_64-sun-solaris
-  - TARGET=x86_64-unknown-freebsd
-  - TARGET=x86_64-unknown-linux-gnu
-  - TARGET=x86_64-unknown-linux-musl
-
 matrix:
   allow_failures:
     - rust: nightly
+  include:
+    - env: TARGET=i686-apple-darwin
+      os: osx
+    - env: TARGET=i686-linux-android
+    - env: TARGET=i686-pc-windows-gnu
+      os: windows
+    - env: TARGET=i686-pc-windows-msvc
+      os: windows
+    - env: TARGET=i686-unknown-freebsd
+    - env: TARGET=i686-unknown-linux-gnu
+    - env: TARGET=i686-unknown-linux-musl
+    - env: TARGET=x86_64-apple-darwin
+      os: osx
+    - env: TARGET=x86_64-pc-windows-gnu
+      os: windows
+    - env: TARGET=x86_64-pc-windows-msvc
+      os: windows
+    - env: TARGET=x86_64-sun-solaris
+    - env: TARGET=x86_64-unknown-freebsd
+    - env: TARGET=x86_64-unknown-linux-gnu
+    - env: TARGET=x86_64-unknown-linux-musl
